cli/tests/snapshot/inputs/errors/base64_decode_invalid_encoding.ncl
# capture = 'stderr'
# command = ['eval']
std.string.base64_decode 'Standard "!"
